--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -3,30 +3,32 @@
 {% load my_tags %}
 
 {% block content %}
-    <div class="col-12">
-        <div class="row">
-            <div class="col-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h3 class="card-title">
-                            "{{ object.name }}"
-                        </h3>
-                        <p class="text-muted">
-                            {{ object.slug }}
-                        </p>
-                    </div>
-                    <div class="card-body flex-column">
-                        <p class="text-muted">
-                            Опубликовано: {{ object.created_at}}
-                        </p>
-                        {{ object.content_blog }}
-                    </div>
-                    <div class="card-footer">
-                        Просмотры: {{ object.views_count }}
-                    </div>
+<div class="col-12">
+    <div class="row">
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        "{{ object.name }}"
+                    </h3>
+                    <p class="text-muted">
+                        {{ object.slug }}
+                    </p>
+                </div>
+                <div class="card-body flex-column">
+                    <p class="text-muted">
+                        Опубликовано: {{ object.created_at}}
+                    </p>
+                    {{ object.content_blog }}
+                </div>
+                <div class="card-footer">
+                    Просмотры: {{ object.views_count }}
                 </div>
             </div>
-
+        </div>
+        <div class="col-6 d-flex align-items-lg-start justify-content-center">
+            <img src="{{object.image_blog | mediapath}}" alt="{{ object.name }}" style="width: 40rem; height: 40rem;">
         </div>
     </div>
+</div>
 {% endblock %}
