--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -26,24 +26,26 @@
                 <div class="card-footer"></div>
             </div>
         </div>
-        <div class="col-6">
-            <div class="card">
-                <div class="card-header">
-                    <h3 class="card-title">
-                        Версия
-                    </h3>
-                </div>
-                <div class="card-header">
-                    {{ formset.management_form}}
-                    {% for form in formset.forms %}
-                    {{ form.as_p }}
-                    {% if not forloop.last %}
-                        <hr>
-                    {% endif %}
-                    {% endfor %}
+        {% if formset %}
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">
+                            Версия
+                        </h3>
+                    </div>
+                    <div class="card-header">
+                        {{ formset.management_form}}
+                        {% for form in formset.forms %}
+                            {{ form.as_p }}
+                        {% if not forloop.last %}
+                            <hr>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     </form>
 </div>
 {% endblock %}
