--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <a href="{% url 'catalog:list_product' %}"  type="button" class="btn btn-danger"> Назад </a>
+                    <a href="{% url 'catalog:product_list' %}"  type="button" class="btn btn-danger"> Назад </a>
                 </div>
             </div>
         </div>
